[package]
name = "pangalactic_cli_pg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.7"
structopt = "0.3"
log = "0.4.14"
serde_json = "1.0.66"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.pangalactic_errorutil]
path = "../pangalactic_errorutil"

[dependencies.pangalactic_codec]
path = "../pangalactic_codec"

[dependencies.pangalactic_codecpath]
path = "../pangalactic_codecpath"

[dependencies.pangalactic_cryptopubsub]
path = "../pangalactic_cryptopubsub"

[dependencies.pangalactic_node]
path = "../pangalactic_node"

[dependencies.pangalactic_nodestore]
path = "../pangalactic_nodestore"

[dependencies.pangalactic_logger]
path = "../pangalactic_logger"

[dependencies.pangalactic_fs]
path = "../pangalactic_fs"

[dependencies.pangalactic_appdirs]
path = "../pangalactic_appdirs"

[dependencies.pangalactic_store]
path = "../pangalactic_store"

[dependencies.pangalactic_cryptostore]
path = "../pangalactic_cryptostore"

[dependencies.pangalactic_dirstore]
path = "../pangalactic_dirstore"

[dev-dependencies]
testdir = "*"
test-case = "1.2.0"
