[package]
name = "pangalactic_codec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
derive_more = "0.99"
serde = "1.0"
serde_cbor = "0.11.1"

[dependencies.pangalactic_errorutil]
path = "../pangalactic_errorutil"
